--- a/reflections/pages/oneness-duality/index2.html
+++ b/reflections/pages/oneness-duality/index2.html
@@ -45,20 +45,20 @@
 </head>
 <body>
   <header>
-    <img src="reflections/pages/oneness-duality/oneness-duality.png" alt="Stone Grill Logo">
+    <img src="/oneness-duality/oneness-duality.png" alt="Stone Grill Logo">
     <h1>Ninox Reflections</h1>
   </header>
 
   <main>
     <article class="card">
-      <img class="cover" src="./cover.jpg" alt="Oneness and Duality cover" onerror="this.src='reflections/pages/oneness-duality/oneness-duality.png'">
+      <img class="cover" src="./cover.jpg" alt="Oneness and Duality cover" onerror="this.src='oneness-duality/oneness-duality.png'">
       <div class="inner">
         <h2>Oneness and Duality — A Journey from Duality to Oneness</h2>
         <p><em>To the seekers who still believe there is more. To the ones who carry silence like prayer, and light like memory. May this remind you that every breath is a conversation with eternity.</em></p>
         <p>This short book is a walk with quiet—how stillness slows the mind, steadies the heart, and returns you to what matters.</p>
         <div class="actions">
           <a class="btn" href="./read.html">Read Reflection</a>
-          <a class="btn secondary" href="./oneness-duality.pdf">Download PDF</a>
+          <a class="btn secondary" href="./oneness-duality/oneness-duality.pdf">Download PDF</a>
         </div>
         <a class="back" href="/reflections/index.html">← Back to Reflections</a>
       </div>
