--- a/reflections/pages/oneness-duality/index2.html
+++ b/reflections/pages/oneness-duality/index2.html
@@ -51,7 +51,7 @@
 
   <main>
     <article class="card">
-      <img class="cover" src="./cover.jpg" alt="Oneness and Duality cover" onerror="this.src='oneness-duality/oneness-duality.png'">
+      <img class="cover" src="./cover.jpg" alt="Oneness and Duality cover" onerror="this.src='oneness-duality.png'">
       <div class="inner">
         <h2>Oneness and Duality — A Journey from Duality to Oneness</h2>
         <p><em>To the seekers who still believe there is more. To the ones who carry silence like prayer, and light like memory. May this remind you that every breath is a conversation with eternity.</em></p>
