--- a/reflections/pages/oneness-duality/index2.html
+++ b/reflections/pages/oneness-duality/index2.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Oneness and Duality — Stone Grill Reflections</title>
   <meta name="description" content="Afascinating course through philosophy, theology, and psychology, ultimately converging on a single, profound idea of Oneness and Dualty">
-  <link rel="icon" href="/reflections/IMG_0690.png">
+  <link rel="icon" href="reflections/IMG_0690.png">
   <style>
     :root{
       --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d;
@@ -55,7 +55,6 @@
       <div class="inner">
         <h2>Oneness and Duality — A Journey from Duality to Oneness</h2>
         <p><em>To the seekers who still believe there is more. To the ones who carry silence like prayer, and light like memory. May this remind you that every breath is a conversation with eternity.</em></p>
-        <p>This short book is a walk with quiet—how stillness slows the mind, steadies the heart, and returns you to what matters.</p>
         <div class="actions">
           <a class="btn" href="./read.html">Read Reflection</a>
           <a class="btn secondary" href="./oneness-duality/oneness-duality.pdf">Download PDF</a>
