--- a/reflections/pages/oneness-duality/index2.html
+++ b/reflections/pages/oneness-duality/index2.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Oneness and Duality — Stone Grill Reflections</title>
   <meta name="description" content="Afascinating course through philosophy, theology, and psychology, ultimately converging on a single, profound idea of Oneness and Dualty">
-  <link rel="icon" href="reflections/IMG_0690.png">
+  <link rel="icon" href="/IMG_0690.png">
   <style>
     :root{
       --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d;
@@ -45,8 +45,8 @@
 </head>
 <body>
   <header>
-    <img src="/oneness-duality/oneness-duality.png" alt="Stone Grill Logo">
-    <h1>Ninox Reflections</h1>
+    <img src="/oneness-duality.png" alt="Stone Grill Logo">
+    <h1></h1>
   </header>
 
   <main>
