--- a/reflections/pages/oneness-duality/index2.html
+++ b/reflections/pages/oneness-duality/index2.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <header>
-    <img src="IMG_0690.png" alt="Stone Grill Logo">
+    <img src="./IMG_0690.png" alt="Stone Grill Logo">
     <h1></h1>
   </header>
 
