--- a/reflections/pages/oneness-duality/index2.html
+++ b/reflections/pages/oneness-duality/index2.html
@@ -57,7 +57,7 @@
         <p><em>To the ones who carry silence like prayer, and light like memory. May this remind you that every breath is a conversation with eternity.</em></p>
         <div class="actions">
           <a class="btn" href="./read.html">Read Reflection</a>
-          <a class="btn secondary" href="./oneness-duality/oneness-duality.pdf">Download PDF</a>
+          <a class="btn secondary" href="./oneness-duality.pdf">Download PDF</a>
         </div>
         <a class="back" href="/reflections/index.html">← Back to Reflections</a>
       </div>
