--- a/reflections/pages/moments-of-solitude/index.html
+++ b/reflections/pages/moments-of-solitude/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Moments of Solitude — Stone Grill Reflections</title>
   <meta name="description" content="A quiet invitation to stillness and presence.">
-  <link rel="icon" href="/reflections/assets/favicon.ico">
+  <link rel="icon" href="/IMG_0690">
   <style>
     :root{
       --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d;
@@ -45,13 +45,13 @@
 </head>
 <body>
   <header>
-    <img src="reflections/logo.PNG" alt="Stone Grill Logo">
+    <img src="reflections/IMG_0690.png" alt="Stone Grill Logo">
     <h1>Ninox Reflections</h1>
   </header>
 
   <main>
     <article class="card">
-      <img class="cover" src="./cover.jpg" alt="Moments of Solitude cover" onerror="this.src='reflections/pages/moments-of-solitude/moments-of-solitude.png'">
+      <img class="cover" src="./cover.jpg" alt="Moments of Solitude cover" onerror="this.src='moments-of-solitude.png'">
       <div class="inner">
         <h2>Moments of Solitude — How Silence Teaches</h2>
         <p><em>To the seekers who still believe there is more. To the ones who carry silence like prayer, and light like memory. May this remind you that every breath is a conversation with eternity.</em></p>
