--- a/reflections/pages/oneness-duality/index2.html
+++ b/reflections/pages/oneness-duality/index2.html
@@ -6,6 +6,11 @@
   <title>Oneness and Duality — Stone Grill Reflections</title>
   <meta name="description" content="Afascinating course through philosophy, theology, and psychology, ultimately converging on a single, profound idea of Oneness and Dualty">
   <link rel="icon" href="/IMG_0690.png">
+    <meta property="og:image" content="oneness-duality.png">
+<meta property="og:image:width" content="240">
+<meta property="og:image:height" content="371">
+<meta property="og:image:alt" content="A Journey from Duality to Oneness">
+
   <style>
     :root{
       --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d;
