--- a/reflections/pages/oneness-duality/index2.html
+++ b/reflections/pages/oneness-duality/index2.html
@@ -33,7 +33,7 @@
       background:var(--paper); border:2px solid #e67e22; border-radius:var(--radius);
       overflow:hidden; display:grid; grid-template-columns: 1fr; gap:0;
     }
-    .cover{width:100%; aspect-ratio: 2/3; object-fit:cover; background:#fff6e6}
+    .cover{width:100%; aspect-ratio: 16/9; object-fit:cover; background:#fff6e6}
     .inner{padding:18px}
     h2{margin:0 0 8px; font-size:clamp(22px,4vw,34px)}
     p{margin:8px 0; color:var(--muted)}
@@ -56,7 +56,7 @@
 
   <main>
     <article class="card">
-      <img class="cover" src="./cover.jpg" alt="Oneness and Duality cover" onerror="this.src='oneness-duality.png'">
+      <img class="cover" src="./IMG_0771.jpeg" alt="Oneness and Duality cover" onerror="this.src='IMG_0771.jpeg'">
       <div class="inner">
         <h2>A Journey from Duality to Oneness</h2>
         <p><em>To the ones who carry silence like prayer, and light like memory. May this remind you that every breath is a conversation with eternity.</em></p>
