--- a/reflections/pages/mirror-of-worship/read.html
+++ b/reflections/pages/mirror-of-worship/read.html
@@ -162,7 +162,7 @@
       <section class="cover">
         <a href="/reflections/pages/mirror-of-worship/cover.jpg" title="Open cover">
           <img class="cover"
-               src="/reflections/pages/mirror-of-worship/cover.jpg"
+               src="/mirror-worship.PNG"
                alt="The Mirror of Worship — cover"
                onerror="this.src='/reflections/assets/cover-fallback.png'">
         </a>
