--- a/reflections/pages/mirror-of-worship/read.html
+++ b/reflections/pages/mirror-of-worship/read.html
@@ -160,7 +160,7 @@
 
       <!-- ===== Cover (image + title + actions) ===== -->
       <section class="cover">
-        <a href="/reflections/pages/mirror-of-worship/cover.jpg" title="Open cover">
+        <a href="mirror-worship.PNG" title="Open cover">
           <img class="cover"
                src="/mirror-worship.PNG"
                alt="The Mirror of Worship — cover"
