--- a/reflections/pages/mirror-of-worship/read.html
+++ b/reflections/pages/mirror-of-worship/read.html
@@ -162,7 +162,7 @@
       <section class="cover">
         <a href="mirror-worship.PNG" title="Open cover">
           <img class="cover"
-               src="/mirror-worship.PNG"
+               src="mirror-worship.PNG"
                alt="The Mirror of Worship — cover"
                onerror="this.src='/reflections/assets/cover-fallback.png'">
         </a>
