--- a/reflections/index.html
+++ b/reflections/index.html
@@ -167,6 +167,30 @@
         </div>
       </article>
 
+       <!-- ==== Belief and Goodness ==== -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/belief/read.html" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/belief/belief.png"
+                 alt="Belief and Goodness cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+        <div class="right">
+          <h3><a class="title-link" href="/reflections/pages/belief/index.html" target="_blank" rel="noopener">
+              Belief and Goodness</a></h3>
+          <p>Belief shows awareness of the light, but goodness is walking toward it.</p>
+          <div class="meta">First Edition 2025 • Essay ·
+            <a class="title-link" href="/reflections/pages/belief/belief.pdf">PDF</a>
+          </div>
+          <div class="cover-actions">
+            <a class="btn" href="/reflections/pages/belief/index.html" target="_blank" rel="noopener">Read</a>
+            <a class="btn secondary" href="/reflections/pages/belief/belief.pdf">Download</a>
+          </div>
+        </div>
+      </article>
+      
       <!-- ==== Multilingual Mind ==== -->
       <article class="card">
         <div class="left">
