--- a/reflections/pages/belief/index.html
+++ b/reflections/pages/belief/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Belief is awareness, not alignment. Goodness is the direction of the heart. A reflection by Ninox Antolihao." />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/belief-and-goodness/read.html" />
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/belief/index.html" />
 
   <!-- Favicon (optional) -->
   <link rel="icon" href="/reflections/assets/favicon.ico">
@@ -16,13 +16,13 @@
   <meta property="og:type" content="article">
   <meta property="og:title" content="Belief and Goodness — Ninox Antolihao">
   <meta property="og:description" content="Belief is awareness, not alignment. Goodness is the direction of the heart.">
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/belief-and-goodness/read.html">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/belief/index.html">
   <meta property="og:site_name" content="Moments of Solitude — Stone Grill Press">
   <!-- Use an absolute URL. Place cover.jpg in this page folder (1200×630 recommended). -->
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/belief-and-goodness/cover.jpg">
-  <meta property="og:image:secure_url" content="https://stonegrillresto.net/reflections/pages/belief-and-goodness/cover.jpg">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/belief/belief.png">
+  <meta property="og:image:secure_url" content="https://stonegrillresto.net/reflections/pages/belief/belief.png">
+  <meta property="og:image:width" content="240">
+  <meta property="og:image:height" content="360">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
@@ -97,7 +97,7 @@
     <header>
       <!-- Make the cover clickable to open the image (or your PDF if you prefer) -->
       <a href="cover.jpg" target="_blank" rel="noopener">
-        <img class="cover" src="cover.jpg" alt="Belief and Goodness — cover"
+        <img class="cover" src="belief.png" alt="Belief and Goodness — cover"
              onerror="this.onerror=null;this.src='/reflections/assets/cover-fallback.jpg'">
       </a>
       <div>
@@ -106,7 +106,7 @@
         <div class="actions">
           <!-- If you have a PDF/EPUB, link here -->
           <a class="btn" href="read.html" aria-label="Read online">Read Online</a>
-          <a class="btn" href="belief-and-goodness.pdf" aria-label="Download PDF">Download PDF</a>
+          <a class="btn" href="belief.pdf" aria-label="Download PDF">Download PDF</a>
         </div>
       </div>
     </header>
@@ -126,7 +126,16 @@
       <p>Goodness begins not in belief, but in the quiet choices we make when no one is watching. It is not found in prayers spoken loudly, but in compassion carried silently.</p>
 
       <p>So no—disbelief does not make you evil, and belief alone does not make you good. Goodness is not a claim; it is a direction. It is not what you <em>profess</em> to believe, but what you <em>choose</em> to become.</p>
+  
+      <p>Believing in God doesn’t automatically make someone good, just as not believing doesn’t automatically make someone evil. Belief is awareness — not alignment.</p>
+      <p>The devil believes in God — in fact, he knows God exists better than anyone. But his will opposes the good that God represents. So belief alone doesn’t define morality; intention and action do.</p>
+      <p>“Belief shows awareness of the light, but goodness is walking toward it.”</p>
+      <p>A good person, whether religious or not, acts with compassion, truth, and integrity. An evil person may hide behind faith or reject it entirely — the point isn’t the label, it’s the direction of the heart.</p>
+      <p>So to answer your paradox:</p>
+      <p>	The devil believes in God, but that belief doesn’t make him good — it only proves that knowledge and goodness are not the same.</p>
+      <p>	True goodness isn’t in believing God exists, but in becoming the reflection of what is good.</p>
 
+      
       <hr class="divider">
       <footer>
         <span>© 2025 Ninox Antolihao</span>
