--- a/reflections/index.html
+++ b/reflections/index.html
@@ -6,7 +6,7 @@
   <title>Solitude Reflections — Stone Grill</title>
   <meta name="description" content="All reflections in one page — read or download.">
   <link rel="icon" href="/reflections/assets/favicon.ico">
-    <meta property="og:image" content="https://stonegrillresto.net/reflections/.png">
+    <meta property="og:image" content="https://stonegrillresto.net/reflections/Untitled.png">
 <meta property="og:image:width" content="240">
 <meta property="og:image:height" content="371">
 <meta property="og:image:alt" content="A Journey from Duality to Oneness">
